infra/k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: daynightprint/backend
        imagePullPolicy: Never
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"

        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec: 
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
