infra/k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-depl
spec: 
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mongodb
        image: mongo 
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m" 

---

apiVersion: v1
kind: Service
metadata:
  name: db-service
spec: 
  selector:
    app: db
  ports:
  - port: 27017
    targetPort: 27017
