infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv 
spec:
  ingressClassName: nginx
  rules:
  - host: daynightprint.dev
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/"
        backend:
          service:
            name: backend-service
            port: 
              number: 8000 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-service
            port: 
              number: 3000
